--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -11,6 +11,6 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
-          python-version: '3.8.0'
-      - run: pip install requests
-      - run: python src/first_python_script.py
+          python-version: '3.8.10'
+      - run: pip install -r requirements
+      - run: python main.py
